// or for a specific element CJ25.11 for dark mode to avoid tactile /assets/images/highlight-bg.jpg

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,4 +43,10 @@ a:focus {
 }
 
 
-
+body {
+  background-image: none !important;
+}
+// or for a specific element CJ25.11 for dark mode to avoid tactile /assets/images/highlight-bg.jpg
+.header, .page {
+  background-image: none !important;
+}
